--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>HTML ISSUE BOT 9000</title>
+</head>
 
 <body>
 
@@ -27,10 +28,9 @@
 
   <h4> Issue Bot Camera Capture Archive</h4>
 
-  <img src="images/adam.jpg">
+  <img src="images/adam.jpg" alt="Alternate Image">
   <img src="images/adam.jpg" alt="Avi">
   <img src="images/spencer.jpg" alt="Spencer" target="_blank">
 
 </body>
-</head>
 </html>
